2012-09-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/as8051/i51mch.c,
	* sdas/as8051/i8051.h,
	* sdas/asxxsrc/asdata.c,
	* sdas/asxxsrc/asxxxx.h: another small step towards ASxxxx v5

2012-09-12 Leland Morrison <enigmalee AT sourceforge.net>

	* sdas/asz80/z80.h, sdas/asz80/z80pst.c, sdas/asz80/z80mch.c,
	* sdas/asz80/z80adr.c: added support for undocument z80 instructions

2012-09-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCicode.h,
	* src/SDCCicode.c (isOperandInBitSpace): new function
	* src/mcs51/ralloc.c (packRegsForOneuse): fixed bug #3564969

2012-09-11 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.c (computeType): fixed bug #3564104
	* support/regression/tests/bug3564104.c: reenabled test

2012-09-10 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fixed bug #3566191 by disabling register tracking for iy.
	* src/z80/z80.h,
	  src/z80/ralloc.c:
	  Enabled rematerialization by register allocation for gbz80.

2012-09-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/inline.c: added test for bug #3564755
	* support/regression/tests/bug3565757.c: temporarily disabled bool
	  in struct
	* src/SDCCast.c: fixed bugs #3566114 and #3539508 

2012-09-09 Borut Razem <borut.razem AT gmail.com>

	* configure.in, configure, sdccconf_in.h:
	  removed (commented out) avr and xa51 configuration options

2012-09-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/as8051/Makefile.in,
	* sdas/as8051/asx8051.vcxproj,
	* sdas/as8051/asx8051.vcxproj.filters,
	* sdas/as8051/i51ext.c: removed i51ext.c
	* sdas/as6808/m08mch.c,   sdas/as6808/m08pst.c,
	* sdas/as8051/i51mch.c,   sdas/as8051/i51pst.c,
	* sdas/asgb/gbmch.c,      sdas/asgb/gbpst.c,
	* sdas/asrab/rabbitmch.c, sdas/asrab/rabbitpst.c,
	* sdas/asz80/z80mch.c,    sdas/asz80/z80pst.c,
	* sdas/asxxsrc/asdata.c,  sdas/asxxsrc/asexpr.c,
	* sdas/asxxsrc/aslist.c,  sdas/asxxsrc/asmain.c,